--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/studio.css" />
     <link rel="stylesheet" href="./css/portfolio.css">
   </head>
   <body>
@@ -52,129 +51,131 @@
       <section class="section main-portfolio">
         <div class="container">
           <!--BUTTONS-->
-        <div class="buttons">
           <h1 hidden>buttons</h1>
-            <ul class="button-list list">
-              <li class="button-item">
-                <button class="btn-all" type="button">Все</button>
-              </li>
-              <li class="button-item">
-                <button class="btn-web-sites" type="button">Веб-сайты</button>
-              </li>
-              <li class="button-item">
-                <button class="btn-applications" type="button">Приложения</button>
-              </li>
-              <li class="button-item">
-                <button class="btn-design" type="button">Дизайн</button>
-              </li>
-              <li class="button-item">
-                <button class="btn-marketing" type="button">Маркетинг</button>
-              </li>
-            </ul>
-        </div>
-        <!--all products-->
-        <div class="products">
+          <ul class="button-list list">
+            <li class="button-item">
+              <button class="btn-all" type="button">Все</button>
+            </li>
+            <li class="button-item">
+              <button class="btn-web-sites" type="button">Веб-сайты</button>
+            </li>
+            <li class="button-item">
+              <button class="btn-applications" type="button">Приложения</button>
+            </li>
+            <li class="button-item">
+              <button class="btn-design" type="button">Дизайн</button>
+            </li>
+            <li class="button-item">
+              <button class="btn-marketing" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <!--all products-->
           <ul class="products-list list">
 
             <li class="product-item">
-              <a class="link website-one" href="studio.html">
-                <img src="images/website.jpg" alt="websiteone" 
-                width="370" 
-                height="294">
-              <div class="product-data">
-                <h2 class="product-name">Технокряк</h2>
-                <p class="product-type">Веб-сайт</p></a>
-              </div>
-          </li>
-
-          <li class="product-item">
-            <a class="link desing-one" href="studio.html">
-              <img src="images/Design.jpg" alt="desingone" width="370" height="294">
-            <div class="product-data">
-              <h2 class="product-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="product-type">Дизайн</p></a>
-            </div>
-          </li>
+              <a class="link website-one">
+                <img src="images/website.jpg" alt="websiteone" width="370" height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Технокряк</h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link application-one" href="studio.html">
-                <img src="images/Application.jpg" alt="applicationone" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name">Ресторан<span lang="en"> Seafood</span></h2>
-              <p class="product-type">Приложение</p></a>
-            </div>
-          </li>
+              <a class="link desing-one">
+                <img src="images/Design.jpg" alt="desingone" width="370" height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link marketing-one" href="studio.html">
-              <img src="images/Marketing.jpg" alt="marketingone" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name">Проект <span lang="en">Prime</span></h2>
-              <p class="product-type">Маркетинг</p></a>
-            </div>
-          </li>
+              <a class="link application-one">
+                <img src="images/Application.jpg" alt="applicationone"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Ресторан<span lang="en"> Seafood</span></h2>
+                  <p class="product-type">Приложение</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link application-two" href="studio.html">
-                <img src="images/Applicationtwo.jpg" alt="applicationtwo" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name">Проект <span lang="en">Boxes</span></h2>
-              <p class="product-type">Приложение</p></a>
-            </div>
-          </li>
+              <a class="link marketing-one">
+                <img src="images/Marketing.jpg" alt="marketingone"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Проект <span lang="en">Prime</span></h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link website-two" href="studio.html">
-                <img src="images/websitetwo.jpg" alt="websitetwo" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name" lang="en">Inspiration has no Borders</h2>
-              <p class="product-type">Веб-сайт</p></a>
-            </div>
-          </li>
+              <a class="link application-two">
+                <img src="images/Applicationtwo.jpg" alt="applicationtwo"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Проект <span lang="en">Boxes</span></h2>
+                  <p class="product-type">Приложение</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link desing-two" href="studio.html">
-                <img src="images/designtwo.jpg" alt="desingtwo" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="product-type">Дизайн</p></a>
-            </div>
-          </li>
+              <a class="link website-two">
+                <img src="images/websitetwo.jpg" alt="websitetwo"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name" lang="en">Inspiration has no Borders</h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link maketing-two" href="studio.html">
-                <img src="images/marketingtwo.jpg" alt="maketingtwo" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name">Проект <span lang="en">LAB</span></h2>
-              <p class="product-type">Маркетинг</p></a>
-            </div>
-          </li>
+              <a class="link desing-two">
+                <img src="images/designtwo.jpg" alt="desingtwo"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
 
             <li class="product-item">
-              <a class="link application-three" href="studio.html">
-                <img src="images/aplicationthree.jpg" alt="applicationthree" 
-              width="370" 
-              height="294">
-            <div class="product-data">
-              <h2 class="product-name" lang="en">Growing Business</h2>
-            <p class="product-type">Приложение</p></a>
-            </div>
-          </li>
+              <a class="link maketing-two">
+                <img src="images/marketingtwo.jpg" alt="maketingtwo"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name">Проект <span lang="en">LAB</span></h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
 
+            <li class="product-item">
+              <a class="link application-three">
+                <img src="images/aplicationthree.jpg" alt="applicationthree"
+                     width="370"
+                     height="294">
+                <div class="product-data">
+                  <h2 class="product-name" lang="en">Growing Business</h2>
+                  <p class="product-type">Приложение</p>
+                </div>
+              </a>
+            </li>
           </ul>
-        </div>
         </div>
       </section>
     </main>
