--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>studio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"/> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"/>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <!--Navigating to other pages header-->
             <nav class="header-nav">
                 <!--logo header-->
-                <a class="logo-web link" lang="en" href="index.html">Web<span class="logo-studio link">Studio</span></a>
+                <a class="logo" lang="en" href="index.html">Web<span class="studio">Studio</span></a>
                 <ul class="menu list">
                     <li class="menu-item">
                         <a class="menu-link active link" href="index.html">Студия</a>
@@ -43,7 +43,7 @@
         </div>
     </header>
     <main>
-        <section class="main-header">
+        <section class="section-main-header">
                 <!-- HERO -->
             <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
             <button class="modal-btn" type="button">Заказать услугу</button>
@@ -52,7 +52,7 @@
             <div class="container">
                 <!-- OUR ADVANTAGES -->
                 <h2 hidden>our advantages</h2>
-                <ul class="advantages-list list">
+                <ul class="list list-flex">
                     <li class="advantages-item">
                         <h3 class="title-desc-advantages">Внимание к деталям</h3>
                         <p class="desc-advantages">Идейные соображения, а также<br> начало повседневной работы по<br> формированию позиции.</p>
@@ -76,7 +76,7 @@
             <div class="container">
                 <!--PHOTOS OF "OUR ADVANTAGES"-->
                 <h2 class="title-photo-advantages">Чем мы занимаемся</h2>
-                <ul class="list-advantages-photo list">
+                <ul class="list list-flex">
                     <li class="advantages-photo-item">
                         <img class="layout" src="images/img(5).jpg" alt="верстка" width="370" height="294">
                     </li>
@@ -95,7 +95,7 @@
                 <div class="our-team">
                     <h2 class="title-photo-team-minidesc">Наша команда</h2>
                     <!--PHOTOS AND MINI-DESCRIPTION OF "OUR TEAM"-->
-                    <ul class="team-list list">
+                    <ul class="list list-flex">
                         <li class="team-item">
                             <img class="team-photo" src="images/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260">
                             <div class="team-info">
@@ -131,20 +131,20 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <section class="footer-data">
+      <section class="section-footer-data">
         <div class="container">
             <!--Navigating to other pages footer-->
-            <a class="logo-web link" href="index.html">Web<span class="logo-studio white link">Studio</span></a>
+            <a class="logo link" href="index.html">Web<span class="studio link">Studio</span></a>
             <address>
                 <ul class="footer-contact list">
                     <!--logo footer-->
-                    <li class="footer-contact-item link">
+                    <li class="footer-contact-item">
                         <a class="footer-contact-address link" href="https://goo.gl/maps/ZcJeVGf5RN8S3Xv18" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
-                    <li class="footer-contact-item link">
+                    <li class="footer-contact-item">
                         <a class="footer-conact-email link" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li class="footer-contact-item link">
+                    <li class="footer-contact-item">
                         <a class="footer-contact-phone-number link" href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
