--- a/portfolio.html
+++ b/portfolio.html
@@ -10,62 +10,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
   <!-- HEADER -->
     <header class="page-header">
-      <section class="section-header">
-        <div class="container">
+        <div class="container container-flex">
           <!--Navigating to other pages header-->
         <nav class="header-nav">
           <!--logo header-->
-          <div class="wrap-links">
-            <a class="logo-web link" lang="en" href="index.html">Web<span class="logo-studio link">Studio</span></a>
-             <ul class="menu list">
-               <li class="menu-item">
-                 <a class="menu-link link" href="index.html">Студия</a>
-               </li>
-               <li class="menu-item">
-                 <a class="menu-link active link" href="./portfolio.html">Портфолио</a>
-               </li>
-               <li class="menu-item">
-                 <a class="menu-link link" href="index.html">Контакты</a>
-               </li>
-             </ul>
-          </div>
-             <ul class="header-contact list">
-              <li class="header-contact-item">
-                <a class="header-contact-email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="header-contact-item">
-                <a class="header-contact-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a>
-               </li>
-             </ul>
+            <a class="logo" lang="en" href="index.html">Web<span class="studio">Studio</span></a>
+           <ul class="menu list">
+             <li class="menu-item">
+               <a class="menu-link" href="index.html">Студия</a>
+             </li>
+             <li class="menu-item">
+               <a class="menu-link active" href="./portfolio.html">Портфолио</a>
+             </li>
+             <li class="menu-item">
+               <a class="menu-link" href="index.html">Контакты</a>
+             </li>
+           </ul>
           </nav>
+          <ul class="header-contact list">
+            <li class="header-contact-item">
+              <a class="header-contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-contact-item">
+              <a class="header-contact-phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
         </div>
-      </section>
     </header>
     <main>
-      <section class="section main-portfolio">
+      <section class="section portfolio">
         <div class="container">
           <!--BUTTONS-->
           <h1 hidden>buttons</h1>
           <ul class="button-list list">
-            <li class="button-item">
+            <li class="list-item ">
               <button class="btn-all" type="button">Все</button>
             </li>
-            <li class="button-item">
+            <li class="list-item ">
               <button class="btn-web-sites" type="button">Веб-сайты</button>
             </li>
-            <li class="button-item">
+            <li class="list-item ">
               <button class="btn-applications" type="button">Приложения</button>
             </li>
-            <li class="button-item">
+            <li class="list-item ">
               <button class="btn-design" type="button">Дизайн</button>
             </li>
-            <li class="button-item">
+            <li class="list-item ">
               <button class="btn-marketing" type="button">Маркетинг</button>
             </li>
           </ul>
@@ -73,7 +68,7 @@
           <ul class="products-list list">
 
             <li class="product-item">
-              <a class="link website-one">
+              <a class="website-one">
                 <img src="images/website.jpg" alt="websiteone" width="370" height="294">
                 <div class="product-data">
                   <h2 class="product-name">Технокряк</h2>
@@ -83,7 +78,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link desing-one">
+              <a class="desing-one">
                 <img src="images/Design.jpg" alt="desingone" width="370" height="294">
                 <div class="product-data">
                   <h2 class="product-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
@@ -93,7 +88,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link application-one">
+              <a class="application-one">
                 <img src="images/Application.jpg" alt="applicationone"
                      width="370"
                      height="294">
@@ -105,7 +100,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link marketing-one">
+              <a class="marketing-one">
                 <img src="images/Marketing.jpg" alt="marketingone"
                      width="370"
                      height="294">
@@ -117,7 +112,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link application-two">
+              <a class="application-two">
                 <img src="images/Applicationtwo.jpg" alt="applicationtwo"
                      width="370"
                      height="294">
@@ -129,7 +124,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link website-two">
+              <a class="website-two">
                 <img src="images/websitetwo.jpg" alt="websitetwo"
                      width="370"
                      height="294">
@@ -141,7 +136,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link desing-two">
+              <a class="desing-two">
                 <img src="images/designtwo.jpg" alt="desingtwo"
                      width="370"
                      height="294">
@@ -153,7 +148,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link maketing-two">
+              <a class="maketing-two">
                 <img src="images/marketingtwo.jpg" alt="maketingtwo"
                      width="370"
                      height="294">
@@ -165,7 +160,7 @@
             </li>
 
             <li class="product-item">
-              <a class="link application-three">
+              <a class="application-three">
                 <img src="images/aplicationthree.jpg" alt="applicationthree"
                      width="370"
                      height="294">
@@ -179,28 +174,28 @@
         </div>
       </section>
     </main>
-    <!-- FOOTER -->
-    <footer class="footer">
-      <section class="footer-data">
-        <div class="container">
-          <!--Navigating to other pages footer-->
-          <nav class="footer-nav">
-            <a class="logo-web link" href="index.html" lang="en">Web<span class="logo-studio link" lang="en">Studio</span></a>
-            <ul class="footer-contact list">
-              <!--logo footer-->
-              <li class="footer-contact-item link">
-                <a class="footer-contact-address link" href="" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-              </li>
-              <li class="footer-contact-item link">
-                <a class="footer-conact-email link" href="mailto:info@example.com">info@example.com</a>
-              </li>
-              <li class="footer-contact-item link">
-                <a class="footer-contact-phone-number link" href="tel:+380991111111">+38 099 111 11 11</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </section>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <section class="section-footer-data">
+      <div class="container">
+        <!--Navigating to other pages footer-->
+        <a class="logo link" href="index.html">Web<span class="studio link">Studio</span></a>
+        <address>
+          <ul class="footer-contact list">
+            <!--logo footer-->
+            <li class="footer-contact-item">
+              <a class="footer-contact-address link" href="https://goo.gl/maps/ZcJeVGf5RN8S3Xv18" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="footer-contact-item">
+              <a class="footer-conact-email link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-contact-item">
+              <a class="footer-contact-phone-number link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+    </section>
   </footer>
   </body>
 </html>
