--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                 <h2 class="title-photo-advantages">Чем мы занимаемся</h2>
                 <ul class="list list-flex">
                     <li class="advantages-photo-item">
-                        <img class="layout" src="images/img(5).jpg" alt="верстка" width="370" height="294">
+                        <img class="layout" src="images/studio/img(5).jpg" alt="верстка" width="370" height="294">
                     </li>
                     <li class="advantages-photo-item">
-                        <img class="design" src="images/img.jpg" alt="дизайн" width="370" height="294">
+                        <img class="design" src="images/studio/img.jpg" alt="дизайн" width="370" height="294">
                     </li>
                     <li class="advantages-photo-item">
-                        <img class="external-design" src="images/img(1)(1).jpg" alt="внешнее оформление" width="370" height="294">
+                        <img class="external-design" src="images/studio/img(1)(1).jpg" alt="внешнее оформление" width="370" height="294">
                     </li>
                 </ul>
             </div>
@@ -97,28 +97,28 @@
                     <!--PHOTOS AND MINI-DESCRIPTION OF "OUR TEAM"-->
                     <ul class="list list-flex">
                         <li class="team-item">
-                            <img class="team-photo" src="images/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260">
+                            <img class="team-photo" src="images/team/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260">
                             <div class="team-info">
                                 <h3 class="teammate-name">Игорь Демьяненко</h3>
                                 <p class="mini-desc" lang="en">Product Designer</p>
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-photo" src="images/img(2).jpg" alt="Ольга Репина" width="270" height="260">
+                            <img class="team-photo" src="images/team/img(2).jpg" alt="Ольга Репина" width="270" height="260">
                             <div class="team-info">
                                 <h3 class="teammate-name">Ольга Репина</h3>
                                 <p class="mini-desc" lang="en">Frontend Developer</p>
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-photo" src="images/img(4).jpg" alt="Николай Тарасов" width="270" height="260">
+                            <img class="team-photo" src="images/team/img(4).jpg" alt="Николай Тарасов" width="270" height="260">
                             <div class="team-info">
                                 <h3 class="teammate-name">Николай Тарасов</h3>
                                 <p class="mini-desc" lang="en">Marketing</p>
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-photo" src="images/img(3)(1).jpg" alt="Михаил Ермаков" width="270" height="260">
+                            <img class="team-photo" src="images/team/img(3)(1).jpg" alt="Михаил Ермаков" width="270" height="260">
                             <div class="team-info">
                                 <h3 class="teammate-name">Михаил Ермаков</h3>
                                 <p class="mini-desc" lang="en">UI Designer</p>
@@ -142,7 +142,7 @@
                         <a class="footer-contact-address link" href="https://goo.gl/maps/ZcJeVGf5RN8S3Xv18" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li class="footer-contact-item">
-                        <a class="footer-conact-email link" href="mailto:info@example.com">info@example.com</a>
+                        <a class="footer-contact-email link" href="mailto:info@example.com">info@example.com</a>
                     </li>
                     <li class="footer-contact-item">
                         <a class="footer-contact-phone-number link" href="tel:+380991111111">+38 099 111 11 11</a>
