--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
             <li class="product-item">
               <a class="website-one">
-                <img src="images/website.jpg" alt="websiteone" width="370" height="294">
+                <img src="images/portfolio/website.jpg" alt="websiteone" width="370" height="294">
                 <div class="product-data">
                   <h2 class="product-name">Технокряк</h2>
                   <p class="product-type">Веб-сайт</p>
@@ -79,7 +79,7 @@
 
             <li class="product-item">
               <a class="desing-one">
-                <img src="images/Design.jpg" alt="desingone" width="370" height="294">
+                <img src="images/portfolio/Design.jpg" alt="desingone" width="370" height="294">
                 <div class="product-data">
                   <h2 class="product-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                   <p class="product-type">Дизайн</p>
@@ -89,7 +89,7 @@
 
             <li class="product-item">
               <a class="application-one">
-                <img src="images/Application.jpg" alt="applicationone"
+                <img src="images/portfolio/Application.jpg" alt="applicationone"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -101,7 +101,7 @@
 
             <li class="product-item">
               <a class="marketing-one">
-                <img src="images/Marketing.jpg" alt="marketingone"
+                <img src="images/portfolio/Marketing.jpg" alt="marketingone"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -113,7 +113,7 @@
 
             <li class="product-item">
               <a class="application-two">
-                <img src="images/Applicationtwo.jpg" alt="applicationtwo"
+                <img src="images/portfolio/Applicationtwo.jpg" alt="applicationtwo"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -125,7 +125,7 @@
 
             <li class="product-item">
               <a class="website-two">
-                <img src="images/websitetwo.jpg" alt="websitetwo"
+                <img src="images/portfolio/websitetwo.jpg" alt="websitetwo"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -137,7 +137,7 @@
 
             <li class="product-item">
               <a class="desing-two">
-                <img src="images/designtwo.jpg" alt="desingtwo"
+                <img src="images/portfolio/designtwo.jpg" alt="desingtwo"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -149,7 +149,7 @@
 
             <li class="product-item">
               <a class="maketing-two">
-                <img src="images/marketingtwo.jpg" alt="maketingtwo"
+                <img src="images/portfolio/marketingtwo.jpg" alt="maketingtwo"
                      width="370"
                      height="294">
                 <div class="product-data">
@@ -161,7 +161,7 @@
 
             <li class="product-item">
               <a class="application-three">
-                <img src="images/aplicationthree.jpg" alt="applicationthree"
+                <img src="images/portfolio/aplicationthree.jpg" alt="applicationthree"
                      width="370"
                      height="294">
                 <div class="product-data">
